--- a/templates/home.html
+++ b/templates/home.html
@@ -80,7 +80,7 @@
       <div class="content-wrapper">
         <section class="content-header">
           <h1>
-            Welcome to the Alumni App
+            Welcome to the Alumni Syndicate App
           </h1>
           <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
